spade-tests/src/snapshots/spade_tests__parser__wal_traceable_with_unexpected_param_is_error.snap
---
source: spade-tests/src/parser.rs
---
#[wal_traceable(a, uses_clk, this_is_not_valid)]
struct T {}


error: Unknown attribute 'wal_traceable'
  ┌─ testinput:1:3
  │
1 │ #[wal_traceable(a, uses_clk, this_is_not_valid)]
  │   ^^^^^^^^^^^^^ Unrecognised attribute
